2023-10-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/97c2744a16ad7e6cf6b546a7a6416ec6b21e3a6c ) and raygui ( https://github.com/raysan5/raygui/commit/85a5c104f509b183c8cc7db0d90c2ab7a2b198c8)

2023-09-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Use Ruby-FFI 1.16 ( https://github.com/ffi/ffi )

2023-09-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/raylib_with_imgui.rb : Added

2023-09-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/raygui_helper.rb: Added more APIs
	* example/gui_controls.rb: Added
	* example/shaders_basic_lighting.rb: Added

2023-09-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/2e7a7877a51ca33487642bd7ed0367b017b54486 ) and raygui ( https://github.com/raysan5/raygui/commit/1c3305031d2dcab2fbd3c7d7ded8b7aee1738908)

2023-09-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/37f60e75e72eebd5ff687b8857bf9043d291b0df ) and raygui ( https://github.com/raysan5/raygui/commit/0fccdc61fbd787fdfa9e254fd99def2cdb34fb10 )
	* example/template.rb: now calls UpdateCamera only when orbital model is on

2023-09-02  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/ec6d3bb688ae8c137152eca7cdef9885badd9bee ) and raygui ( https://github.com/raysan5/raygui/commit/12fc56e5e1fe0888a4c73b98890914ca3806a8b4 )
	* Linux (Cross): changed host OS (Ubuntu 22.04 LTS) and cross compiler version

2023-08-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/0959f6ebf69f44d5bb0225cc94fd187ebedf8be5 ) and raygui ( https://github.com/raysan5/raygui/commit/41417db52d951bb08273c892d3e3db3723f1083a )
	* lib/raylib_helper.rb: Added several initialization helper for Camera3D, Camera2D and BoundingBox