@@ -9,13 +9,13 @@
     {
       "name": "RAYLIB_VERSION_MAJOR",
       "type": "INT",
-      "value": 4,
+      "value": 5,
       "description": ""
     },
     {
       "name": "RAYLIB_VERSION_MINOR",
       "type": "INT",
-      "value": 6,
+      "value": 0,
       "description": ""
     },
     {
@@ -27,7 +27,7 @@
     {
       "name": "RAYLIB_VERSION",
       "type": "STRING",
-      "value": "4.6-dev",
+      "value": "5.0-dev",
       "description": ""
     },
     {
@@ -1327,6 +1327,48 @@
           "type": "char **",
           "name": "paths",
           "description": "Filepaths entries"
+        }
+      ]
+    },
+    {
+      "name": "AutomationEvent",
+      "description": "Automation event (opaque struct)",
+      "fields": [
+        {
+          "type": "unsigned int",
+          "name": "frame",
+          "description": "Event frame"
+        },
+        {
+          "type": "unsigned int",
+          "name": "type",
+          "description": "Event type (AutomationEventType)"
+        },
+        {
+          "type": "int[4]",
+          "name": "params",
+          "description": "Event parameters (if required)"
+        }
+      ]
+    },
+    {
+      "name": "AutomationEventList",
+      "description": "Automation event list",
+      "fields": [
+        {
+          "type": "unsigned int",
+          "name": "capacity",
+          "description": "Events max entries (MAX_AUTOMATION_EVENTS)"
+        },
+        {
+          "type": "unsigned int",
+          "name": "count",
+          "description": "Events entries count"
+        },
+        {
+          "type": "AutomationEvent *",
+          "name": "events",
+          "description": "Events entries"
         }
       ]
     }
@@ -3093,14 +3135,14 @@
       ]
     },
     {
-      "name": "WindowShouldClose",
-      "description": "Check if KEY_ESCAPE pressed or Close icon pressed",
-      "returnType": "bool"
-    },
-    {
       "name": "CloseWindow",
       "description": "Close window and unload OpenGL context",
       "returnType": "void"
+    },
+    {
+      "name": "WindowShouldClose",
+      "description": "Check if application should close (KEY_ESCAPE pressed or windows close icon clicked)",
+      "returnType": "bool"
     },
     {
       "name": "IsWindowReady",
@@ -3466,27 +3508,6 @@
       "name": "DisableEventWaiting",
       "description": "Disable waiting for events on EndDrawing(), automatic events polling",
       "returnType": "void"
-    },
-    {
-      "name": "SwapScreenBuffer",
-      "description": "Swap back buffer with front buffer (screen drawing)",
-      "returnType": "void"
-    },
-    {
-      "name": "PollInputEvents",
-      "description": "Register all input events",
-      "returnType": "void"
-    },
-    {
-      "name": "WaitTime",
-      "description": "Wait for some time (halt program execution)",
-      "returnType": "void",
-      "params": [
-        {
-          "type": "double",
-          "name": "seconds"
-        }
-      ]
     },
     {
       "name": "ShowCursor",
@@ -3972,11 +3993,6 @@
       ]
     },
     {
-      "name": "GetFPS",
-      "description": "Get current FPS",
-      "returnType": "int"
-    },
-    {
       "name": "GetFrameTime",
       "description": "Get time in seconds for last frame drawn (delta time)",
       "returnType": "float"
@@ -3985,6 +4001,32 @@
       "name": "GetTime",
       "description": "Get elapsed time in seconds since InitWindow()",
       "returnType": "double"
+    },
+    {
+      "name": "GetFPS",
+      "description": "Get current FPS",
+      "returnType": "int"
+    },
+    {
+      "name": "SwapScreenBuffer",
+      "description": "Swap back buffer with front buffer (screen drawing)",
+      "returnType": "void"
+    },
+    {
+      "name": "PollInputEvents",
+      "description": "Register all input events",
+      "returnType": "void"
+    },
+    {
+      "name": "WaitTime",
+      "description": "Wait for some time (halt program execution)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "double",
+          "name": "seconds"
+        }
+      ]
     },
     {
       "name": "GetRandomValue",
@@ -4031,6 +4073,17 @@
         {
           "type": "unsigned int",
           "name": "flags"
+        }
+      ]
+    },
+    {
+      "name": "OpenURL",
+      "description": "Open URL with default system browser (if available)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "url"
         }
       ]
     },
@@ -4098,17 +4151,6 @@
         {
           "type": "void *",
           "name": "ptr"
-        }
-      ]
-    },
-    {
-      "name": "OpenURL",
-      "description": "Open URL with default system browser (if available)",
-      "returnType": "void",
-      "params": [
-        {
-          "type": "const char *",
-          "name": "url"
         }
       ]
     },
@@ -4549,6 +4591,86 @@
       ]
     },
     {
+      "name": "LoadAutomationEventList",
+      "description": "Load automation events list from file, NULL for empty list, capacity = MAX_AUTOMATION_EVENTS",
+      "returnType": "AutomationEventList",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "fileName"
+        }
+      ]
+    },
+    {
+      "name": "UnloadAutomationEventList",
+      "description": "Unload automation events list from file",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "AutomationEventList *",
+          "name": "list"
+        }
+      ]
+    },
+    {
+      "name": "ExportAutomationEventList",
+      "description": "Export automation events list as text file",
+      "returnType": "bool",
+      "params": [
+        {
+          "type": "AutomationEventList",
+          "name": "list"
+        },
+        {
+          "type": "const char *",
+          "name": "fileName"
+        }
+      ]
+    },
+    {
+      "name": "SetAutomationEventList",
+      "description": "Set automation event list to record to",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "AutomationEventList *",
+          "name": "list"
+        }
+      ]
+    },
+    {
+      "name": "SetAutomationEventBaseFrame",
+      "description": "Set automation event internal base frame to start recording",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "int",
+          "name": "frame"
+        }
+      ]
+    },
+    {
+      "name": "StartAutomationEventRecording",
+      "description": "Start recording automation events (AutomationEventList must be set)",
+      "returnType": "void"
+    },
+    {
+      "name": "StopAutomationEventRecording",
+      "description": "Stop recording automation events",
+      "returnType": "void"
+    },
+    {
+      "name": "PlayAutomationEvent",
+      "description": "Play a recorded automation event",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "AutomationEvent",
+          "name": "event"
+        }
+      ]
+    },
+    {
       "name": "IsKeyPressed",
       "description": "Check if a key has been pressed once",
       "returnType": "bool",
@@ -4604,6 +4726,16 @@
       ]
     },
     {
+      "name": "GetKeyPressed",
+      "description": "Get key pressed (keycode), call it multiple times for keys queued, returns 0 when the queue is empty",
+      "returnType": "int"
+    },
+    {
+      "name": "GetCharPressed",
+      "description": "Get char pressed (unicode), call it multiple times for chars queued, returns 0 when the queue is empty",
+      "returnType": "int"
+    },
+    {
       "name": "SetExitKey",
       "description": "Set a custom key to exit program (default is ESC)",
       "returnType": "void",
@@ -4613,16 +4745,6 @@
           "name": "key"
         }
       ]
-    },
-    {
-      "name": "GetKeyPressed",
-      "description": "Get key pressed (keycode), call it multiple times for keys queued, returns 0 when the queue is empty",
-      "returnType": "int"
-    },
-    {
-      "name": "GetCharPressed",
-      "description": "Get char pressed (unicode), call it multiple times for chars queued, returns 0 when the queue is empty",
-      "returnType": "int"
     },
     {
       "name": "IsGamepadAvailable",
@@ -5412,6 +5534,25 @@
         {
           "type": "int",
           "name": "centerY"
+        },
+        {
+          "type": "float",
+          "name": "radius"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
+      "name": "DrawCircleLinesV",
+      "description": "Draw circle outline (Vector version)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "center"
         },
         {
           "type": "float",
@@ -10338,6 +10479,11 @@
           "name": "volume"
         }
       ]
+    },
+    {
+      "name": "GetMasterVolume",
+      "description": "Get master volume (listener)",
+      "returnType": "float"
     },
     {
       "name": "LoadWave",
