@@ -18,7 +18,6 @@ module Raylib
   PHYSAC_COLLISION_ITERATIONS = 100
   PHYSAC_PENETRATION_ALLOWANCE = 0.05
   PHYSAC_PENETRATION_CORRECTION = 0.4
-  PHYSAC_PI = 3.14159265358979323846
 
   # Enum
 
